Issue IMCMS-706 Menu saving and caching: - increase width of sort order input on small screens - refactor new way to sort - fix menu saving when drag nest

--- a/src/main/webapp/imcms/css/imcms-text_box.css
+++ b/src/main/webapp/imcms/css/imcms-text_box.css
@@ -1,5 +1,5 @@
 .imcms-text-box__input {
     display: block;
-    padding: 8px 5px;
+    padding: 8px 15px;
     line-height: 19px;
 }
